# LRcu

./: README.md  calcKendall.py  calcNetwork.py  calcSIR.py  creatNetwork.py
LRCu/: CMakeLists.txt  run_lr_gpu_linux.py  run_lr_gpu_win.py
LRCu/src/: main.cpp  operator.cu  operator.h  strcut.h
